     with either or both, maximizing compatibility with old and new setups.
     [#2946]

 - `upsmon` client:
   * Clearer debug logging of `SHUTDOWNCMD` and `NOTIFYCMD` that would be used
     (or warnings that none was set); flush output buffers after these messages
     and after each main loop cycle, so any emitted text is seen in a timely
     manner. [issue #3003, PR #3008]

 - Manual page recipes and contents:
   * Introduced handling (possibly rewriting) for man page section "Overviews,
     conventions, and miscellaneous" (commonly number 7), to deliver support
     for `man nut` queries (NUT overview manual page also created). [#2945]
   * A new `configure --with-docs-man-dir-as-base` option was introduced so
     that directories for man page sections can now be automatically named
     as either "base" number of the section (e.g. `man1`) or by full section
     name (`man1m`), as different OS distributions have different preferences
     in this regard. [#2950]
   * Option to `configure --enable-docs-man-for-progs-built-only` was added,
     to differentiate NUT builds that deliver man pages for only built programs
     (legacy default) or for all of them (as needed for docs sites). [#2976]

 - The `BUILD_TYPE=default-all-errors ci_build.sh` script handling was
   revised to simplify code, and to default in CI builds to a quicker
   mode which randomly mixes the selected SSL, USB and UNMAPPED variants
   (and relies on the dozens of NUT CI farm runs per iteration to likely
   cover all possible combinations), which should roughly halve the CI
   build times. Default activity for developer builds should remain as
   it was -- to try each such "axis" sequentially. [#2973]


Release notes for NUT 2.8.3 - what's new since 2.8.2
----------------------------------------------------

https://github.com/networkupstools/nut/milestone/11

 - Fix fallout of development in NUT v2.8.0 and/or v2.8.1 and/or v2.8.2: